--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "swc"    # what kind of Carpentry (must be either "dc" or "swc")
-venue: "James Clerk Maxwell Building"        # brief name of host site without address (e.g., "Euphoric State University")
+venue: "University of Edinburgh, King's Buildings, JCMB"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "Room 3217, James Clerk Maxwell Building, Peter Guthrie Tait Road, Edinburgh, EH9 3FD"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "UK"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "English"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
@@ -47,10 +47,12 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </iframe>
 {% endif %}
 
+<!--
 <h4>This is the workshop template.  Use it to create your own website.
 Delete these lines and please fill in 
 <a href="{{site.amy_site}}/submit">this self-organized workshop form</a>
 and the administrator will contact you if we need any extra information.</h4>
+-->
 
 <h2 id="general">General Information</h2>
 
@@ -65,6 +67,26 @@ and the administrator will contact you if we need any extra information.</h4>
   aims to help researchers get their work done
   in less time and with less pain
   by teaching them basic research computing skills.
+</p>  
+<p>
+  This workshop is hosted by EPCC, Edinburgh Parallel Computing Centre, and organised in collaboration by ARCHER, the Software Sustainability Institute, and UoE Research Data Service.
+</p>
+<p>
+  <a href="http://www.archer.ac.uk">ARCHER</a>, the UK's national
+  supercomputing service, offers training in software development and
+  high-performance computing to scientists and researchers across the
+  UK. As part of our training service we are running a two-day Data
+  Carpentry workshop. 
+</p>
+<p>
+  The <a href="http://www.software.ac.uk">Software Sustanability Institute</a>'s mission is to cultivate better, more sustainable, research software to enable world-class research (<a href="http://softwaresaved.spreadshirt.co.uk/"><em>better software, better research</em></a>). Software is fundamental to research: <a href="http://www.software.ac.uk/blog/2014-12-04-its-impossible-conduct-research-without-software-say-7-out-10-uk-researchers">seven out of ten UK researchers report that their work would be impossible without it</a>.
+</p>
+<p>
+The <a href="http://www.ed.ac.uk/information-services/research-support/research-data-service">Research Data Service</a> is a suite of tools and support for University staff and students to aid them in data management planning, working with data, sharing and preserving their data, and re-skilling. It is delivered by a virtual team spanning across a number of sections of Information Services including EDINA and Data Library, Library & University Collections, IT Infrastructure, User Services, and the Digital Curation Centre.
+</p>
+
+<p>
+  
   This hands-on workshop will cover basic concepts and tools,
   including program design, version control, data management,
   and task automation.
