--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ language: "English"     # lowercase two-letter ISO language code such as "fr" (s
 latlng: "55.9215522,-3.1749893"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
 humandate: "May 11-12, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "9:00 - 17:00"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
-startdate: 2017-05-11      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
-enddate: 2017-05-12        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
+startdate: 2017-05-09      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
+enddate: 2017-05-10        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["TBC"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["TBC"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["g.peru@epcc.ac.uk, support@archer.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
-etherpad:             # optional: URL for the workshop Etherpad if there is one
+etherpad: https://hackpad.com/2017-05-09-edinburgh-jQyqxOVZDdW           # optional: URL for the workshop Etherpad if there is one
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
