--- a/index.html
+++ b/index.html
@@ -215,23 +215,23 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
   <div class="span6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:30</td> <td>Introduction and software set-up</td> </tr>
-      <tr> <td>10:00</td> <td>Version control with Git</td> </tr>
+      <tr> <td>9:00</td> <td>Welcome and set-up</td> </tr>
+      <tr> <td>9:30</td> <td>Version control with Git</td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>11:00</td> <td>Version control with Git</td> </tr>
-      <tr> <td>13:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td> <td>Building programs with Python</td> </tr>
+      <tr> <td>12:30</td> <td>Lunch break</td> </tr>
+      <tr> <td>13:30</td> <td>Automating tasks with Make</td> </tr>
       <tr> <td><em>15:00</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>15:30</td> <td>Building programs with Python</td> </tr>
+      <tr> <td>15:30</td> <td>Automating tasks with Make</td> </tr>
       <tr> <td>17:00</td> <td>Close</td> </tr>
     </table>
   </div>
   <div class="span6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>10:00</td> <td>Automating tasks with Make</td> </tr>
-      <tr> <td><em>11:00</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>11:30</td> <td>Automating tasks with Make</td> </tr>
+      <tr> <td>9:00</td> <td>Python</td> </tr>
+      <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
+      <tr> <td>11:00</td> <td>Python</td> </tr>
       <tr> <td>13:00</td> <td>Lunch break</td> </tr>
       <tr> <td>14:00</td> <td>Data Management with SQL</td> </tr>
       <tr> <td><em>15:30</em></td> <td><em>Coffee break</em></td> </tr>
@@ -260,7 +260,7 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
 -->
 {% if page.etherpad %}
 <p id="etherpad">
-  <strong>Etherpad:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>.
+  <strong>Etherpad:</strong> <a> href="https://hackpad.com/2017-05-09-edinburgh-jQyqxOVZDdW"</a>.
   <br/>
   We will use this Etherpad for chatting, taking notes, and sharing URLs and bits of code.
 </p>
