--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ carpentry: "swc"    # what kind of Carpentry (must be either "dc" or "swc")
 venue: "University of Edinburgh, King's Buildings, JCMB"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "Room 3217, James Clerk Maxwell Building, Peter Guthrie Tait Road, Edinburgh, EH9 3FD"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "UK"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
-language: "English"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
+language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "55.9215522,-3.1749893"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
 humandate: "May 9-10, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "9:00 - 17:00"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
@@ -232,11 +232,10 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
       <tr> <td>9:00</td> <td>Python</td> </tr>
       <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>11:00</td> <td>Python</td> </tr>
-      <tr> <td>13:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>14:00</td> <td>Data Management with SQL</td> </tr>
-      <tr> <td><em>15:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>16:00</td> <td>Data Management with SQL</td> </tr>
-      <tr> <td>16:45</td> <td>Best practices for scientific computing</td> </tr>
+      <tr> <td>12:30</td> <td>Lunch break</td> </tr>
+      <tr> <td>13:30</td> <td>Python</td> </tr>
+      <tr> <td><em>15:00</em></td> <td><em>Coffee break</em></td> </tr>
+      <tr> <td>15:30</td> <td>Python</td> </tr>
       <tr> <td>17:00</td> <td>Close</td> </tr>
     </table>
   </div>
@@ -260,9 +259,9 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
 -->
 {% if page.etherpad %}
 <p id="etherpad">
-  <strong>Etherpad:</strong> <a> href="https://hackpad.com/2017-05-09-edinburgh-jQyqxOVZDdW"</a>.
+  <strong>Hackpad:</strong> <a> href="https://hackpad.com/2017-05-09-edinburgh-jQyqxOVZDdW"</a>.
   <br/>
-  We will use this Etherpad for chatting, taking notes, and sharing URLs and bits of code.
+  We will use this hackpad for chatting, taking notes, and sharing URLs and bits of code.
 </p>
 {% endif %}
 
