--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
       <tr> <td>13:30</td> <td>Python</td> </tr>
       <tr> <td><em>15:00</em></td> <td><em>Coffee break</em></td> </tr>
       <tr> <td>15:30</td> <td>Python</td> </tr>
+      <tr> <td>16:30</td> <td>Wrap-up and feedback</td> </tr>
       <tr> <td>17:00</td> <td>Close</td> </tr>
     </table>
   </div>
