--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
 -->
 {% if page.etherpad %}
 <p id="etherpad">
-  <strong>Hackpad:</strong> <a> href="https://hackpad.com/2017-05-09-edinburgh-jQyqxOVZDdW"</a>.
+  <strong>Hackpad:</strong> <a> href="{{page.etherpad}}">{{page.etherpad}}</a>.
   <br/>
   We will use this hackpad for chatting, taking notes, and sharing URLs and bits of code.
 </p>
