--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
   e.g., '2015-06-10-esu'.
 -->
 {% if page.etherpad %}
-<p id="etherpad">
-  <strong>Hackpad:</strong> <a> href="{{page.etherpad}}">{{page.etherpad}}</a>.
+<p>
+  <strong>Hackpad:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>.
   <br/>
   We will use this hackpad for chatting, taking notes, and sharing URLs and bits of code.
 </p>
