--- a/index.html
+++ b/index.html
@@ -203,14 +203,15 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
 <p>Please be sure to complete these surveys before and after the workshop.</p>
 <p><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop Survey</a></p>
 <p><a href="{{ site.post_survey }}{{ site.github.project_title }}">Post-workshop Survey</a></p>
-<!--
-  SCHEDULE
 
+<!--  
+SCHEDULE
   Show the workshop's schedule.  Edit the items and times in the table
   to match your plans.  You may also want to change 'Day 1' and 'Day
   2' to be actual dates or days of the week.
 -->
 
+<h2>Schedule</h2>
 <div class="row-fluid">
   <div class="span6">
     <h3>Day 1</h3>
