--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humandate: "May 9-10, 2017"    # human-readable dates for the workshop (e.g., "F
 humantime: "9:00 - 17:00"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2017-05-09      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2017-05-10        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["TBC"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Mike Jackson", "Rupert Nash", "Manos Farsarakis"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["TBC"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["g.peru@epcc.ac.uk, support@archer.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad: https://hackpad.com/2017-05-09-edinburgh-jQyqxOVZDdW         # optional: URL for the workshop Etherpad if there is one
