Added registration link.

--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
 
 <hr/>
 
+<h2>Registration</h2>
+<p>
+To register, or to get more information, please, visit the <a
+href="http://www.archer.ac.uk/training/">ARCHER training page</a>.
+</p>
+
+
 <!-- DO NOT EDIT SURVEY LINKS -->
 <h2>Surveys</h2>
 <p>Please be sure to complete these surveys before and after the workshop.</p>
