--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ startdate: 2017-05-09      # machine-readable start date for the workshop in YYY
 enddate: 2017-05-10        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Juan Herrera", "Mike Jackson", "Rupert Nash", "Manos Farsarakis"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["TBC"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: ["g.peru@epcc.ac.uk, support@archer.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
+contact: ["support@archer.ac.uk"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad: https://hackpad.com/2017-05-09-edinburgh-jQyqxOVZDdW         # optional: URL for the workshop Etherpad if there is one
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
@@ -202,6 +202,7 @@ The <a href="http://www.ed.ac.uk/information-services/research-support/research-
 <p>
 To register, or to get more information, please, visit the <a
 href="http://www.archer.ac.uk/training/">ARCHER training page</a>.
+You can also register directly <a href="https://events.prace-ri.eu/event/612/registration/register#/register">here</a>.
 </p>
 
 
